<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:text="@string/login_tvTitulo" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_tvUsername"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_tvPassword"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/btnLogin"
                app:backgroundTint="@android:color/holo_green_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="btnLogin_Click"
                android:paddingHorizontal="40dp"
                android:text="@string/login_btnLogin"
                android:textSize="20sp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvSignupText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/login_tvSignupText"
                    android:textSize="20sp" />

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:id="@+id/btnSignup"
                    android:textColor="@android:color/holo_green_light"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_btnSignup"
                    android:textSize="20sp"
                    android:textAllCaps="false" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>