<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="80dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvLabelUid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detalhesBilhete_tvLabelUid"
                android:textStyle="bold" />

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tvUid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvLabelLugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detalhesBilhete_tvLabelLugar"
                android:textStyle="bold" />

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tvLugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvLabelDisponivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detalhesBilhete_tvLabelDisponivel"
                android:textStyle="bold" />

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tvDisponivel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvLabelStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detalhesBilhete_tvLabelStatus"
                android:textStyle="bold" />

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:backgroundTint="@color/green_medium"
                android:text="@string/detalhesBilhete_btnCancelar"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btnCheckin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginEnd="120dp"
                android:backgroundTint="@color/green_medium"
                android:text="@string/detalhesBilhete_btnCheckin"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>