<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SignupFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/logo" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_tvTitulo"
                    android:textSize="28sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/tvUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_tvUsername"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_tvEmail"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/tvPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_tvPassword"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnSignup"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="20dp"
                    app:backgroundTint="@color/green_medium"
                    android:paddingHorizontal="40dp"
                    android:text="@string/signup_btnSignup"
                    android:textSize="20sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>