<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivEvento"
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:layout_marginTop="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvLabelTitulo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detalhesEvento_tvLabelTitulo"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/tvTitulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvLabelCategoria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detalhesEvento_tvLabelCategoria"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/tvCategoria"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnAddFav"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:gravity="start"
                        android:background="@drawable/fav"
                        android:visibility="invisible" />

                    <Button
                        android:id="@+id/btnRemoveFav"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:gravity="start"
                        android:background="@drawable/not_fav"
                        android:visibility="gone" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvLabelDescricao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detalhesEvento_tvLabelDescricao"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDescricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp" />
        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>